--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@openzeppelin/contracts": "^4.9.1",
     "hardhat": "^2.14.0"
-  },
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.8.3"
   }
 }
